Add wafer-dataset testcase

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/intellij,gradle,eclipse,maven,visualstudiocode
 lingua-franca/**
 lingua-franca/**
+lingua-franca/**
