--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ gradle-app.setting
 lingua-franca/**
 lingua-franca/**
 lingua-franca/**
+lingua-franca/**
+lingua-franca/**
+lingua-franca/**
+lingua-franca/**
